[gd_scene load_steps=4 format=3 uid="uid://dga1ijdbhvo1n"]

[ext_resource type="PackedScene" uid="uid://b1eg4lgqwdml7" path="res://scenes/dungeons/dungeon_template.tscn" id="1_b4iwn"]
[ext_resource type="Script" uid="uid://dko6f2fxyyq4n" path="res://scenes/dungeons/main_sub_gate_2.gd" id="2_phjx8"]
[ext_resource type="PackedScene" uid="uid://ca5ijfjdvqu1o" path="res://scenes/warp_zone.tscn" id="3_2ox2j"]

[node name="dungeon" instance=ExtResource("1_b4iwn")]
script = ExtResource("2_phjx8")

[node name="GridMap" parent="." index="0"]
data = {
"cells": PackedInt32Array(-65536, 65535, 786432, -65536, 65534, 786432, -1, 65535, 786432, -1, 65534, 786432, -2, 65534, 786432, -2, 65535, 786432, -3, 65535, 786432, -3, 65534, 786432, -4, 65534, 786432, -4, 65535, 786432, -65535, 65535, 786432, -65534, 65535, 786432, -65533, 65535, 786432, -65533, 65534, 786432, -65534, 65534, 786432, -65535, 65534, 786432, -5, 65535, 786432, -7, 65535, 720898, -65546, 65535, 720898, -131085, 65535, 720898, -196623, 65535, 786432, -196624, 65535, 786432, -196625, 65535, 786432, -196627, 65535, 786432, -196626, 65535, 786432, -196628, 65535, 786432, -196626, 0, 786432, -196626, 1, 786432, -196626, 2, 786432, -196626, 3, 786432, -196626, 4, 786432, -196627, 3, 786432, -196625, 3, 786432, -65529, 65535, 786432, -65529, 0, 786432, -65529, 1, 786432, -65528, 1, 786432, -65527, 1, 786432, -65527, 0, 786432, -65527, 65535, 786432, -65528, 65535, 786432, -65528, 0, 786432, -65529, 65534, 786432, -65529, 65533, 786432, -65529, 65532, 786432, -65528, 65532, 786432, -65527, 65532, 786432, -65527, 65533, 786432, -65527, 65534, 786432, -65528, 65534, 786432, -65528, 65533, 786432, -65536, 65532, 786432, -65536, 65531, 786432, -1, 65531, 786432, -2, 65531, 786432, -2, 65532, 786432, -3, 65531, 786432, -65536, 65530, 786432, -1, 65530, 786432, -2, 65530, 786432, -3, 65530, 786432, -4, 65531, 786432, -4, 65529, 786432, -3, 65529, 786432, -2, 65529, 786432, -65536, 65529, 786432, -1, 65528, 786432, -1, 65527, 786432, -65536, 65527, 786432, -2, 65527, 786432, -2, 65528, 786432, -65536, 65528, 786432, -1, 65525, 786432, -1, 65524, 786432, -1, 65522, 786432, -1, 65521, 786432, -65536, 65521, 786432, -65536, 65526, 786432, -65536, 65525, 786432, -65536, 65524, 786432, -65536, 65523, 786432, -65536, 65522, 786432, -2, 65521, 786432, -3, 65526, 786432, -3, 65527, 786432, -3, 65528, 786432, -2, 65526, 786432, -2, 65525, 786432, -2, 65524, 786432, -2, 65523, 786432, -2, 65522, 786432, -7, 65530, 786432, -8, 65531, 786432, -7, 65532, 786432, -6, 65531, 786432, -7, 65531, 786432, -11, 65523, 786432, -11, 65522, 786432, -11, 65521, 786432, -11, 65524, 786432, -11, 65525, 786432, -12, 65525, 786432, -13, 65525, 786432, -14, 65525, 786432, -15, 65525, 786432, -15, 65524, 786432, -15, 65521, 786432, -14, 65521, 786432, -13, 65521, 786432, -12, 65521, 786432, -12, 65522, 786432, -12, 65523, 786432, -12, 65524, 786432, -13, 65524, 786432, -14, 65524, 786432, -15, 65523, 786432, -14, 65523, 786432, -14, 65522, 786432, -13, 65522, 786432, -13, 65523, 786432, -15, 65522, 786432, -13, 65529, 786432, -14, 65530, 786432, -65534, 65518, 786432, -65533, 65518, 786432, -65532, 65518, 786432, -65531, 65518, 786432, -65531, 65517, 786432, -65531, 65516, 786432, -65531, 65515, 786432, -65531, 65514, 786432, -65531, 65513, 786432, -65531, 65512, 786432, -65532, 65512, 786432, -65533, 65512, 786432, -65534, 65512, 786432, -65535, 65512, 786432, 0, 0, 1048579, 65535, 0, 655365, 65534, 0, 655365, 65533, 0, 655365, 65532, 0, 655365, 65531, 0, 655365, 1, 0, 655365, 2, 0, 655365, 3, 0, 655365, -131087, 0, 655365, -131088, 0, 655365, -131092, 0, 655365, -131093, 65535, 1048581, -131092, 65534, 5, -131091, 65534, 5, -131090, 65534, 5, -131089, 65534, 5, -131088, 65534, 5, -131087, 65534, 5, 65532, 65533, 5, 65533, 65533, 5, 65535, 65533, 5, 1, 65533, 5, 2, 65533, 5, 3, 65533, 5, 6, 1, 1048581, 6, 65533, 1048581, 6, 65532, 1048581, 9, 65531, 5, 10, 65532, 1441797, 10, 65533, 1441797, 10, 65534, 1441797, 10, 65535, 1441797, 10, 1, 1441797, 10, 0, 1441797, 9, 2, 655365, 8, 2, 655365, 7, 2, 655365, 7, 1, 786432, 7, 0, 786432, 7, 65535, 786432, 7, 65534, 786432, 7, 65533, 786432, 7, 65532, 786432, 7, 65531, 5, 8, 65531, 5, 65543, 65531, 1441795, 65543, 65530, 1441796, 65542, 65529, 655364, 65541, 65529, 655363, 4, 65529, 786432, 3, 65529, 786432, 2, 65529, 786432, 1, 65531, 1441801, 1, 65530, 1441801, 1, 65529, 1441801, 1, 65528, 1441801, 1, 65527, 1441801, 1, 65526, 1441801, 1, 65525, 1441801, 1, 65524, 1441801, 1, 65523, 1441801, 1, 65522, 1441801, 1, 65521, 1441801, 65543, 65529, 1310728, 65538, 65523, 655363, 65539, 65523, 655364, 65532, 65527, 3, 65531, 65527, 4, 65530, 65527, 4, 65529, 65528, 1441796, 65529, 65527, 524296, 65529, 65529, 1441795, 65533, 65525, 10, 65533, 65524, 1048585, 65533, 65523, 1048585, 65533, 65522, 1048585, 65533, 65521, 1048585, 65532, 65523, 786432, 65531, 65523, 786432, 65530, 65523, 786432, 65529, 65523, 786432, 65528, 65523, 786432, 65527, 65523, 786432, 65526, 65521, 1441801, 65526, 65522, 1441801, 65526, 65523, 1441801, 65526, 65524, 1441801, 65526, 65525, 1441801, 65525, 65525, 786432, 65525, 65524, 786432, 65525, 65523, 786432, 65525, 65522, 786432, 65524, 65522, 786432, 65524, 65521, 786432, 65523, 65521, 786432, 65521, 65521, 786432, 65521, 65522, 786432, 65521, 65523, 786432, 65521, 65524, 786432, 65521, 65525, 786432, 65522, 65525, 786432, 65523, 65525, 786432, 65524, 65525, 786432, 65524, 65524, 786432, 65524, 65523, 786432, 65523, 65523, 786432, 65522, 65523, 786432, 65522, 65524, 786432, 65523, 65524, 786432, 65522, 65522, 786432, 65522, 65521, 786432, 65523, 65522, 786432, 65522, 65520, 1441795, 65522, 65519, 1441796, 65522, 65518, 1441796, 65523, 65520, 5, 65524, 65520, 5, 65525, 65520, 5, 65521, 65520, 5, 65520, 65521, 1048581, 65520, 65522, 1048581, 65520, 65523, 1048581, 65520, 65524, 1048581, 65520, 65525, 1048581, 65525, 65526, 655365, 65521, 65526, 655365, 65523, 65526, 1048579, 65523, 65528, 1441795, 65523, 65527, 1441796, 65524, 65526, 655365, 65522, 65526, 655365, -131089, 0, 655361, -131091, 0, 1048577, 65542, 1, 1048581, 65542, 0, 1048581, 65542, 65535, 1048581, 65542, 65534, 1048581, 65542, 65532, 1048581, 65542, 65533, 1048581, 65544, 65531, 5, 65545, 65531, 5, 65546, 65532, 1441797, 65546, 65533, 1441797, 65546, 65534, 1441797, 65546, 65535, 1441797, 65546, 0, 1441797, 65546, 1, 1441797, 65545, 2, 655365, 65544, 2, 655365, 65543, 2, 655365, 4, 65535, 655363, 6, 65535, 3, 5, 65535, 4, 6, 0, 1048581, 6, 65534, 1048581, 4, 65534, 1441797, 65531, 65534, 1, 65534, 65520, 1441795, 1, 65518, 3, 0, 65518, 4, 65535, 65518, 4, 65534, 65519, 1441796, 65534, 65518, 524296, 0, 65512, 3, 65535, 65512, 4, 65534, 65512, 4, 65534, 65533, 5, 0, 65533, 5, 65532, 65528, 1048581, 65532, 65530, 1048581, 65533, 65532, 655365, 65535, 65532, 655365, 65528, 65530, 655371, 65530, 65532, 11, 65528, 65532, 1441803, 65530, 65530, 1048587, 65531, 65531, 1441797, 65529, 65533, 655365, 65527, 65531, 1048581, -131089, 2, 1048587, -131089, 4, 11, -131091, 4, 1441803, -131091, 2, 655371, -131091, 1, 1048581, -131089, 1, 1441797, -131088, 3, 1441797, -131092, 3, 1048581, -131090, 5, 655365, 65522, 65529, 655371, 65522, 65531, 1441803, 65524, 65529, 1048587, 65524, 65531, 11, -12, 65530, 786432, -13, 65531, 786432, -13, 65530, 786432, 65521, 65530, 1048581, 65523, 65532, 655365, 65525, 65530, 1441797, 65540, 65530, 655365, 65539, 65530, 655365, 65539, 65528, 5, 65540, 65528, 5, 65538, 65531, 1441797, 65538, 65527, 1441797, 65538, 65526, 1441797, 65538, 65525, 1441797, 65538, 65524, 1441797, 65538, 65522, 1441797, 65538, 65521, 1441797, 65537, 65520, 5, 0, 65520, 5, 65535, 65520, 5, 131069, 65520, 5, 131068, 65521, 1048581, 131068, 65525, 1048581, 65532, 65526, 1048581, 131068, 65524, 1048577, 131068, 65522, 1, 65538, 65528, 1441793, 65538, 65530, 655361, 65537, 65532, 655365, 131067, 65524, 655365, 131066, 65524, 655365, 131065, 65524, 655365, 131064, 65524, 655365, 131067, 65522, 5, 131066, 65522, 5, 131065, 65522, 5, 131064, 65522, 5, 131063, 65521, 1441797, 131063, 65525, 1441797, 131062, 65526, 655365, 131061, 65526, 655365, 131060, 65526, 655365, 131059, 65526, 655365, 131058, 65526, 655365, 131057, 65526, 655365, 131056, 65525, 1048581, 131056, 65524, 1048581, 131056, 65523, 1048581, 131056, 65522, 1048581, 131056, 65521, 1048581, 131057, 65520, 5, 131058, 65520, 5, 131059, 65520, 5, 131060, 65520, 5, 131061, 65520, 5, 131062, 65520, 5, 131063, 65522, 1441793, 131063, 65524, 655361, 2, 65517, 5, 3, 65517, 5, 4, 65516, 1048581, 4, 65515, 1048581, 4, 65514, 1048581, 1, 65511, 5, 2, 65511, 5, 3, 65511, 5, 4, 65511, 5, 6, 65513, 1441797, 6, 65514, 1441797, 6, 65515, 1441797, 6, 65516, 1441797, 6, 65517, 1441797, 2, 65519, 655365, 3, 65519, 655365, 4, 65519, 655365, 1, 65513, 655365, 2, 65513, 655365, 3, 65513, 655365, 4, 65513, 1048577, 4, 65517, 1, 5, 65519, 655365, 6, 65518, 1441797, 6, 65512, 1441797, 5, 65511, 5)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Warp Zone" parent="." index="4" instance=ExtResource("3_2ox2j")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 4.5, 1.5, -12.5)

[node name="Warp Zone2" parent="." index="5" instance=ExtResource("3_2ox2j")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -2.5, 0.5, -23.5)

[node name="Warp Zone3" parent="." index="6" instance=ExtResource("3_2ox2j")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.5, 0.5, 1.5)

[connection signal="body_entered" from="Warp Zone" to="." method="_on_warp_zone_body_entered"]
[connection signal="body_entered" from="Warp Zone2" to="." method="_on_warp_zone_2_body_entered"]
[connection signal="body_entered" from="Warp Zone3" to="." method="_on_warp_zone_3_body_entered"]
